--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,20 +6,19 @@ build-backend = "setuptools.build_meta"
 name = "thunderlab"
 dynamic = ["version"]
 dependencies = [
+  "scikit-learn",
   "scipy",
   "numpy",
+  "numba",
   "matplotlib",
   "audioio>=2.1"
 ]
-requires-python = ">=3.4"
+requires-python = ">=3.6"
 authors = [
   {name = "Jan Benda", email = "jan.benda@uni-tuebingen.de"},
-  {name = "Juan F. Sehuanes"},
-  {name = "Till Raab"},
   {name = "Jörg Henninger"},
   {name = "Jan Grewe"},
   {name = "Fabian Sinz"},
-  {name = "Liz Weerdmeester"}
 ]
 maintainers = [
   {name = "Jan Benda", email = "jan.benda@uni-tuebingen.de"},
