--- a/.github/workflows/uploaddocs.yml
+++ b/.github/workflows/uploaddocs.yml
@@ -30,8 +30,11 @@ jobs:
         run: pytest -v --cov-report xml --cov-report html:cover --cov-report term --cov thunderlab tests/
         shell: bash
 
-      - name: Build and install
+      - name: Build
         run: python -m build
+        shell: bash
+
+      - name: Install
         run: pip install .
         shell: bash
 
